telegramBot is partially ready

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+telegram.bot.token=8053205648:AAHO3_jRLOsbnrgIQdaxBGdobqfDVECwpgg
+telegram.chat.id=2056561567
